--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -7,6 +7,9 @@ lint:
   enabled:
     - gitleaks@7.6.1
     - prettier@2.4.1
+merge:
+  statuses:
+    - Run Pull Request checks
 version: 0.1
 api:
   address: api.trunk-staging.io:5021
